tests/negative/neg_pr113_incomplete_constraints.safe
package Neg_PR113_Incomplete_Constraints
   type Packet (Active : Boolean = True, Kind : Character = 'A', Count : Integer = 0) is
      record
         Value : Integer;

   P : Packet (True, 'A') = (Value = 1);

